-[P3D01.04] When a group update is received validate that only the affected Parts are updated.
